# medical_voice_recognition

./: pyproject.toml  setup.cfg
