[metadata]
name = src
version = 0.0.1
description = A quick flask demo 
long_description = file: README.md
long_description_content_type = text/markdown
author = Muhammed Amr
author_email = muhammedamr57@gmail.com
url = https://github.com/Mhammedammr/med_voice_recognition.git
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11

install_requires=
    pandas==2.2.3
    Flask==3.0.3
    groq==0.18.0
    fireworks-ai==0.15.12
    python-dotenv==1.0.0
    beautifulsoup4==4.12.2
    uuid==1.30
    sqlalchemy==2.0.38
    psycopg2-binary==2.9.10
    pyarrow==19.0.1
    pydub==0.25.1
    librosa==0.11.0
    fastapi==0.115.12
    uvicorn==0.34.3
    python-multipart==0.0.20
    pyaudio==0.2.14

[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
dev =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3

[options.package_data]
voiceRecognition = py.typed


[flake8]
max-line-length = 88
extend-ignore = E712, F401, W293, E303, W292
